@@ -1,2 +1,5 @@
 # MightyVocab
-Vocab Studying Application via Virtual Notecards
+
+## Run Configuration
+--module-path "./lib/javafx-sdk-18.0.1/lib"
+--add-modules javafx.controls,javafx.fxml
